--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "simple-express-app",
   "version": "1.0.0",
-  "description": "Minimal Express webapp to demonstrate Dockerising",
+  "description": "Minimal Express web app to demonstrate Dockerising",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WinterWindSoftware/simple-express-app"
   },
   "author": "Paul Swail",
   "license": "ISC",
