--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Paul Swail",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "moment": "^2.22.0"
   }
 }
